# Fbtrial

./: .replit  .replit.workflow  COMPLIANCE.md  LastFix.md  PYCORD_261_COMPATIBILITY.md  README_LAUNCH.md  VERIFICATION_CHECKLIST.md  app.py  app_enhanced.py  bot.py  check_discord.py  check_imports.py  check_secrets.py  clean_requirements.py  clean_requirements.txt  cog_dependencies.md  completion.md  database.py  direct_bot.py  discord_adapter.py  discord_bot.py  duplicate_groups.txt  extract_zip.py  finish.md  integration_test.py  launcher.sh  main.py  manage.py  move_files.py  pyproject.toml  replit.sh  replit_run.py  requirements.txt  requirements_clean_new.txt  run.py  run.sh  run_bot.py  run_bot.sh  run_replit.sh  run_replit_bot.py  (+9 more)
unzipped_project/Sobored-main/: .replit  COG_MIGRATION_GUIDE.md  HOW_TO_RUN.md  PY_CORD_COMPATIBILITY.md  QUICK_START.md  app.py  cog_cleanup_plan.md  discord-bot.service  discord_compat.py  fixed_bot_runner.py  fixed_events_monitor.py  launch.sh  patch_cogs.py  pycord_adapter.py  pyproject.toml  run.py  run.sh  run_direct_bot.sh  run_fixed_bot.sh  run_replit.py  run_replit.sh  setup_workflow.py  start_bot.sh  test_migrated_cog.py
unzipped_project/Sobored-main/attached_assets/: Pasted--AI-Engineering-Task-Protocol-Claude-Opus-Enforcement-Template-SESSION-TYPE-Structured-Audit-1747199557043.txt  fixes.md
unzipped_project/Sobored-main/cogs/: error_handling_cog.py  setup_fixed.py  sftp_commands_simple.py
unzipped_project/Sobored-main/cogs_backup/: bounties_updated.py
unzipped_project/Sobored-main/discord_bot.egg-info/: SOURCES.txt  requires.txt
unzipped_project/Sobored-main/utils/: command_handlers.py  discord_impl.py  error_handlers.py  file_discovery.py  interaction_handlers.py  safe_mongodb.py  server_identity.py  server_utils.py
unzipped_project/Sobored-main/utils/async_utils/: __init__.py
(+177 files in other folders)
