[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cogs", "utils", "models"]

[project]
name = "discord-bot"
version = "1.0.0"
description = "Discord Bot for Replit"
readme = "README.md"
authors = [
    {name = "Replit"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "py-cord==2.6.1",
    "motor==3.3.2",
    "pymongo==4.6.1",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "dnspython>=2.3.0,<2.7.0",
    "requests>=2.31.0",
    "pydantic<2.0.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "boto3>=1.37.38",
    "aiofiles>=24.1.0",
    "pandas>=2.0.3",
    "paramiko>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-asyncio",
]
